--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "A bittorrent client for education purposes!",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wender Vitor, following Allen Kim Tutorial",
   "license": "ISC",
   "dependencies": {
-    "bencode": "^2.0.1"
+    "bencode": "^2.0.1",
+    "bignum": "^0.13.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
