--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A bittorrent client for education purposes!",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "download": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wender Vitor, following Allen Kim Tutorial",
